crates/brief-parser/tests/snapshots/snapshots__arithmetic_operators.snap
---
source: crates/brief-parser/tests/snapshots.rs
expression: pretty_print_ast(&program)
---
Program
  declarations:
    VarDecl
      name: x
      initializer: BinaryOp(Sub)
          left: BinaryOp(Add)
              left: Integer(1)
              right: Integer(2)
          right: BinaryOp(Mod)
              left: BinaryOp(Div)
                  left: BinaryOp(Mul)
                      left: Integer(3)
                      right: Integer(4)
                  right: Integer(5)
              right: Integer(6)
