crates/brief-parser/tests/snapshots/snapshots__class_declaration.snap
---
source: crates/brief-parser/tests/snapshots.rs
assertion_line: 671
expression: pretty_print_ast(&program)
---
Program
  declarations:
    ClassDecl
      name: Dog
      methods:
        MethodDecl
          name: bark
          is_instance: false
          params:
          body:
            Block
              statements:
                Expr:
Call
                    callee: Variable(print)
                    args:
Interpolation
                        parts:
                          Text("woof")
