crates/brief-parser/tests/snapshots/snapshots__comparison_operators.snap
---
source: crates/brief-parser/tests/snapshots.rs
expression: pretty_print_ast(&program)
---
Program
  declarations:
    VarDecl
      name: x
      initializer: BinaryOp(And)
          left: BinaryOp(Lt)
              left: Integer(1)
              right: Integer(2)
          right: BinaryOp(Ge)
              left: Integer(3)
              right: Integer(4)
