crates/brief-parser/tests/snapshots/snapshots__complex_nested.snap
---
source: crates/brief-parser/tests/snapshots.rs
expression: pretty_print_ast(&program)
---
Program
  declarations:
    Error
    Error
    Error
    Error
    Error
    Error
    Error
    Error
    Error
    Error
