crates/brief-parser/tests/snapshots/snapshots__error_invalid_expression.snap
---
source: crates/brief-parser/tests/snapshots.rs
expression: pretty_print_ast(&program)
---
Program
  declarations:
    VarDecl
      name: x
      initializer: UnaryOp(Pos)
          expr: Error
