crates/brief-parser/tests/snapshots/snapshots__error_missing_paren.snap
---
source: crates/brief-parser/tests/snapshots.rs
assertion_line: 701
expression: pretty_print_ast(&program)
---
Program
  declarations:
    FuncDecl
      name: test
      params:
        Param
          name: x
      body:
        Block
          statements:
            Return
              value: Variable(x)
