crates/brief-parser/tests/snapshots/snapshots__error_recovery_multiple.snap
---
source: crates/brief-parser/tests/snapshots.rs
assertion_line: 722
expression: pretty_print_ast(&program)
---
Program
  declarations:
    FuncDecl
      name: test
      params:
      body:
        Block
          statements:
            Return
              value: Variable(x)
    FuncDecl
      name: other
      params:
      body:
        Block
          statements:
            Return
              value: Variable(y)
