crates/brief-parser/tests/snapshots/snapshots__error_unexpected_token.snap
---
source: crates/brief-parser/tests/snapshots.rs
assertion_line: 708
expression: pretty_print_ast(&program)
---
Program
  declarations:
    FuncDecl
      name: test
      params:
      return_type: Int
      body:
        Block
          statements:
            Expr:
Cast
                expr: Error
                target_type: Int
