crates/brief-parser/tests/snapshots/snapshots__for_in_loop.snap
---
source: crates/brief-parser/tests/snapshots.rs
expression: pretty_print_ast(&program)
---
Program
  declarations:
    Error
    Error
    Error
    Error
    Error
