crates/brief-parser/tests/snapshots/snapshots__for_loop.snap
---
source: crates/brief-parser/tests/snapshots.rs
expression: pretty_print_ast(&program)
---
Program
  declarations:
    Error
    VarDecl
      name: i
    Error
    VarDecl
      name: i
    Error
    Error
    Error
    Error
    Error
