crates/brief-parser/tests/snapshots/snapshots__function_declaration.snap
---
source: crates/brief-parser/tests/snapshots.rs
assertion_line: 664
expression: pretty_print_ast(&program)
---
Program
  declarations:
    FuncDecl
      name: add
      params:
        Param
          name: x
          type: Int
        Param
          name: y
          type: Int
      return_type: Int
      body:
        Block
          statements:
            Return
              value: BinaryOp(Add)
                  left: Variable(x)
                  right: Variable(y)
